--- a/html/src/vue/components/controls/modal/modal.css
+++ b/html/src/vue/components/controls/modal/modal.css
@@ -62,6 +62,10 @@
     transition: all 0.3s ease;
 }
 
+.modal-header.popup__header {
+    border-bottom: none;
+}
+
 .modal-header h3 {
     margin-top: 0;
     color: #42b983;
