--- a/html/src/styles/app.css
+++ b/html/src/styles/app.css
@@ -13,3 +13,23 @@ body {
     color: #6C757D;
     text-decoration: underline;
 }
+
+.slide-enter-active {
+    transition-duration: 0.3s;
+    transition-timing-function: ease-in;
+}
+
+.slide-leave-active {
+    transition-duration: 0.3s;
+    transition-timing-function: cubic-bezier(0, 1, 0.5, 1);
+}
+
+.slide-enter-to, .slide-leave {
+    max-height: 100px;
+    overflow: hidden;
+}
+
+.slide-enter, .slide-leave-to {
+    overflow: hidden;
+    max-height: 0;
+}
