--- a/html/src/styles/app.css
+++ b/html/src/styles/app.css
@@ -33,3 +33,13 @@ body {
     overflow: hidden;
     max-height: 0;
 }
+
+.cursor-pointer {
+    color: gray;
+    transition: 0.3s all;
+    cursor: pointer;
+}
+
+.cursor-pointer:hover {
+    color: black;
+}
