--- a/html/src/vue/components/controls/modal/modal.css
+++ b/html/src/vue/components/controls/modal/modal.css
@@ -54,7 +54,7 @@
 }
 
 .modal-container {
-    width: 300px;
+    /* width: 300px; */
     margin: 0 auto;
     background-color: #fff;
     /* border-radius: 4px; */
@@ -94,7 +94,7 @@
     display: flex;
     flex-direction: column;
     position: relative;
-    width: 616px;
+    width: 820px;
     max-width: 100%;
     /* border-radius: 8px; */
 
