--- a/html/src/vue/components/controls/modal/modal.css
+++ b/html/src/vue/components/controls/modal/modal.css
@@ -51,6 +51,10 @@
         width: 100%;
         height: 100%;
     }
+
+    &--visible {
+        overflow: visible;
+    }
 }
 
 .modal-container {
